Add full bilingual functionality for all current pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,7 +51,7 @@
             <a href="./location.html" class="navbar-item">Location</a>
             <a href="./events.html" class="navbar-item">Events</a>
             <a href="./contact.html" class="navbar-item">Contact</a>
-            <a href="../spanish/index-es.html" class="navbar-item">En Español</a>
+            <a href="../spanish/contact-es.html" class="navbar-item">En Español</a>
           </div>
         </div>
     </nav>
