--- a/pages/events.html
+++ b/pages/events.html
@@ -51,7 +51,7 @@
             <a href="./location.html" class="navbar-item">Location</a>
             <a href="./events.html" class="navbar-item">Events</a>
             <a href="./contact.html" class="navbar-item">Contact</a>
-            <a href="../spanish/index-es.html" class="navbar-item">En Español</a>
+            <a href="../spanish/events-es.html" class="navbar-item">En Español</a>
           </div>
         </div>
     </nav>
@@ -68,38 +68,6 @@
   
 <section class="section">
 </section> 
-
-
-  <!-- Modal -->
-
-  <div class="modal" id="modal-1">
-    <div class="modal-background" id="modal-bg-1"></div>
-    <div class="modal-content has-background-white py-5 px-5">
-      <h3 class="title mb-6">Our Mailing List</h3>
-      <form name="contact" method="POST" data-netlify="true">
-        <!-- Regular text input below -->
-        <div class="field">
-          <label class="label">Name</label>
-          <!-- Always use class of control for inputs like this from users -->
-          <!-- And surround it in a div with that class -->
-          <div class="control">
-            <input type="text" class="input" name="name" placeholder="Name">
-          </div>
-        </div>
-        <div class="field">
-          <label class="label">Email</label>
-          <div class="control">
-            <input type="email" class="input" name="email" placeholder="Email">
-          </div>
-              <div class="mt-6 has-text-centered">
-            <button class="button" type="submit" id="send-email">Send</button>
-          </div>    
-        </div>
-      </form>
-    </div>
-  </div>
-  <!-- End Modal -->
-    
   <footer class="footer has-text-centered is-white">
      <h2 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h2>
     <div class="block pt-4">
