--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -42,15 +42,15 @@
             <div class="navbar-item has-dropdown is-hoverable">
               <a href="" class="navbar-link is-arrowless ">Artistas</a>
               <div class="navbar-dropdown">
-                <a href="" class="navbar-item is-size-6">Victor Fuentes</a>
+                <a href="./victor_fuentes-es.html" class="navbar-item is-size-6">Victor Fuentes</a>
                 <hr class="navbar-divider">
-                <a href="" class="navbar-item is-size-6">Inmaculada Cruz</a>
+                <a href="./inmaculada_cruz-es.html" class="navbar-item is-size-6">Inmaculada Cruz</a>
               </div>
             </div>
-            <a href="#" class="navbar-item">Personal</a>
-            <a href="#" class="navbar-item">Localización</a>
-            <a href="#" class="navbar-item">Eventos</a>
-            <a href="#" class="navbar-item">Contactar</a>
+            <a href="./staff-es.html" class="navbar-item">Personal</a>
+            <a href="./location-es.html" class="navbar-item">Localización</a>
+            <a href="./events-es.html" class="navbar-item">Eventos</a>
+            <a href="./contact-es.html" class="navbar-item">Contactar</a>
             <a href="../index.html" class="navbar-item">En Inglés</a>
           </div>
         </div>
