--- a/spanish/inmaculada_cruz-es.html
+++ b/spanish/inmaculada_cruz-es.html
@@ -22,12 +22,12 @@
   <body class="has-navbar-fixed-top">
     <nav class="navbar has-shadow is-white is-fixed-top">
       <div class="navbar-brand pl-4">
-        <a href="../index.html#" class="navbar-item is-size-2">
+        <a href="./index-es.html#" class="navbar-item is-size-2">
           <span class="icon-text">
           <span class="icon">
             <i class="fas fa-palette"></i>
         </span>
-          <span class="is-size-5 pl-4">Nicaraguan Art</span>
+          <span class="is-size-5 pl-4">Arte Nicaragüense</span>
          </span>
         <a/>
         <a class="navbar-burger" id="burger">
@@ -38,68 +38,49 @@
       </div>
         <div class="navbar-menu mr-5" id="nav-links">
           <div class="navbar-end is-size-5">
-            <a href="../index.html#mission" class="navbar-item">Our Mission</a>
+            <a href="./index-es.html#mission" class="navbar-item">Nuestra misión</a>
             <div class="navbar-item has-dropdown is-hoverable">
-              <a href="" class="navbar-link is-arrowless ">Artists</a>
+              <a href="" class="navbar-link is-arrowless ">Artistas</a>
               <div class="navbar-dropdown">
-                <a href="victor_fuentes.html" class="navbar-item is-size-6">Victor Fuentes</a>
+                <a href="./victor_fuentes-es.html" class="navbar-item is-size-6">Victor Fuentes</a>
                 <hr class="navbar-divider">
-                <a href="inmaculada_cruz.html" class="navbar-item is-size-6">Inmaculada Cruz</a>
+                <a href="#" class="navbar-item is-size-6">Inmaculada Cruz</a>
               </div>
             </div>
-            <a href="./staff.html" class="navbar-item">Staff</a>
-            <a href="./location.html" class="navbar-item">Location</a>
-            <a href="./events.html" class="navbar-item">Events</a>
-            <a href="./contact.html" class="navbar-item">Contact</a>
-            <a href="../spanish/staff-es.html" class="navbar-item">En Español</a>
+            <a href="./staff-es.html" class="navbar-item">Personal</a>
+            <a href="./location-es.html" class="navbar-item">Localización</a>
+            <a href="./events-es.html" class="navbar-item">Eventos</a>
+            <a href="./contact-es.html" class="navbar-item">Contactar</a>
+            <a href="../pages/inmaculada_cruz.html" class="navbar-item">En Inglés</a>
           </div>
         </div>
     </nav>
     <div class="section has-text-centered">
-      <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Staff</h1>
-      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Under Construction 🔨</h2>
+      <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Inmaculada Cruz</h1>
+      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Pintora y Chef</h2>
     </div>
-    <section class="hero is-large is-hidden-mobile" id="ometepe">
-      <div class="hero-body">
-    <!-- This is where I will put in some content -->
-          <!-- And more content here -->
+    <div class="columns is-centered has-text-centered section pt-0">
+      <div class="column is-three-quarters">
+        <figure class="image is-3by2">
+          <img class="shadow" src="../images/inmaculada.jpg" alt="Inmaculada Cruz, painter" />
+        </figure>
+        <div class="section">
+        <article class="message is-dark is-medium" id="mission">
+          <div class="message-header">
+            <p>Biografia del artista</p>
+          </div>
+          <div class="message-body"><p class="is-size-6-mobile has-text-justified">Inmaculada Cruz nació en la Isla de Ometepe, Nicaragua. Desde pequeña, la flora y fauna de esta isla influyó en su desarrollo artístico. Aprendió a pintar la naturaleza que la rodeaba tal como la percibía: los árboles, las flores, los animales, las granjas, la gente y sus costumbres. Más tarde descubrió que su pintura es primitiva, nativa y natural. No tiene un estilo derivado y no depende de técnicas sofisticadas.</p>
+            <br>
+          <p class="is-size-6-mobile has-text-justified">Al día de hoy, más de sesenta años después de iniciar su trayectoria artística, su alma de pintora sigue buscando nuevas formas y nuevas técnicas. Ella está renovando constantemente su forma de trabajar. Desde hace muchos años pinta no solo las formas que ve o recuerda, sino también las formas producidas por su imaginación.</p>
+          </div>
+        </article>
+        </div>
       </div>
-    </section>
+    </div>
   
 <section class="section">
 </section> 
 
-
-  <!-- Modal -->
-
-  <div class="modal" id="modal-1">
-    <div class="modal-background" id="modal-bg-1"></div>
-    <div class="modal-content has-background-white py-5 px-5">
-      <h3 class="title mb-6">Our Mailing List</h3>
-      <form name="contact" method="POST" data-netlify="true">
-        <!-- Regular text input below -->
-        <div class="field">
-          <label class="label">Name</label>
-          <!-- Always use class of control for inputs like this from users -->
-          <!-- And surround it in a div with that class -->
-          <div class="control">
-            <input type="text" class="input" name="name" placeholder="Name">
-          </div>
-        </div>
-        <div class="field">
-          <label class="label">Email</label>
-          <div class="control">
-            <input type="email" class="input" name="email" placeholder="Email">
-          </div>
-              <div class="mt-6 has-text-centered">
-            <button class="button" type="submit" id="send-email">Send</button>
-          </div>    
-        </div>
-      </form>
-    </div>
-  </div>
-  <!-- End Modal -->
-    
   <footer class="footer has-text-centered is-white">
      <h2 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h2>
     <div class="block pt-4">
@@ -126,7 +107,5 @@
     <script src="../js/index.js"></script>
   </body>
 </html>
-
-
 
 
