--- a/pages/inmaculada_cruz.html
+++ b/pages/inmaculada_cruz.html
@@ -51,7 +51,7 @@
             <a href="./location.html" class="navbar-item">Location</a>
             <a href="./events.html" class="navbar-item">Events</a>
             <a href="./contact.html" class="navbar-item">Contact</a>
-            <a href="../spanish/index-es.html" class="navbar-item">En Español</a>
+            <a href="../spanish/inmaculada_cruz-es.html" class="navbar-item">En Español</a>
           </div>
         </div>
     </nav>
@@ -61,7 +61,7 @@
     </div>
     <div class="columns is-centered has-text-centered section pt-0">
       <div class="column is-three-quarters">
-        <figure class="image is-4by3">
+        <figure class="image is-3by2">
           <img class="shadow" src="../images/inmaculada.jpg" alt="Inmaculada Cruz, painter" />
         </figure>
         <div class="section">
